--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<encoding>UTF-8</encoding>
 
-		<serenity.version>4.2.1</serenity.version>
+		<serenity.version>4.2.8</serenity.version>
 		<slf4j.version>1.7.28</slf4j.version>
 		<junit-platform-launcher.version>1.11.0</junit-platform-launcher.version>
 		<junit-5.version>5.11.0</junit-5.version>
@@ -25,6 +25,7 @@
 		<swagger-annotations.version>1.6.14</swagger-annotations.version>
 		<lombok.version>1.18.34</lombok.version>
 		<javax.annotation-api.version>1.3</javax.annotation-api.version>
+		<commons-configuration2.version>2.11.0</commons-configuration2.version>
 		<tags></tags>
 	</properties>
 
@@ -71,9 +72,20 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback-classic.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>${assertj-core.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>${commons-configuration2.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
