--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<logback-classic.version>1.5.8</logback-classic.version>
 		<assertj-core.version>3.26.3</assertj-core.version>
 		<openapi-generator-maven-plugin.version>7.6.0</openapi-generator-maven-plugin.version>
+		<jackson.version>2.18.1</jackson.version>
 		<jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
 		<build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
 		<swagger-annotations.version>1.6.14</swagger-annotations.version>
@@ -85,6 +86,21 @@
 			<artifactId>commons-configuration2</artifactId>
 			<version>${commons-configuration2.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openapitools</groupId>
@@ -208,7 +224,6 @@
 								<sourceFolder>src/gen/java</sourceFolder>
 							</configOptions>
 							<typeMappings>
-								<typeMapping>OffsetDateTime=java.time.LocalDateTime</typeMapping>
 								<typeMapping>Float=java.math.BigDecimal</typeMapping>
 							</typeMappings>
 						</configuration>
